--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,28 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.start-work {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.start-work img {
+  position: fixed;
+  width: 15%;
+  top: 50%;
+  left: 50%;
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 h1 {
   text-align: center;
